# ContextForge

./: .gitignore  README.md  contextforge  contextforge.bak  contextforge.py  finetune.py  output.txt  pyproject.toml  test_model.py
tests/: test_contextforge.py  test_files_to_prompt.py
