[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contextforge"
version = "0.1.0"
description = "Modern code processing and filtering tool for AI training"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click",
    "rich",
    "pygithub",
    "gitpython",
    "pathspec",
    "mlx-lm",
    "openai",
    "google-cloud-aiplatform",
    "ruff",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
]

[project.urls]
Homepage = "https://github.com/yourusername/contextforge"
Documentation = "https://github.com/yourusername/contextforge#readme"
Repository = "https://github.com/yourusername/contextforge.git"
Issues = "https://github.com/yourusername/contextforge/issues"

[project.scripts]
contextforge = "contextforge:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q --cov=contextforge"

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "B", "I"]
ignore = []

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.coverage.run]
source = ["contextforge"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "raise ImportError",
    "except ImportError:",
] 